k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: usermanagement-service
spec:
  type: NodePort
  selector:
    app: usermanagement-app
  ports:
    - port: 8002
      # By default and for convenience, the `targetPort` is set to
      # the same value as the `port` field.
      targetPort: 8002
      # Optional field
      # By default and for convenience, the Kubernetes control plane
      # will allocate a port from a range (default: 30000-32767)
      nodePort: 32107
